# talepanel

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Caddyfile  INSTALL.md  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  UPGRADING.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  cla.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/desktop/src/: App.vue  main.ts  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: api.rs  commands.rs  lib.rs  main.rs  state.rs
apps/mobile/: pubspec.yaml
apps/mobile/lib/: main.dart  router.dart  theme.dart
apps/web/: Dockerfile  Dockerfile.dev  error.vue  nuxt.config.ts  package.json  tailwind.config.ts
apps/web/components/: UpdateBanner.vue
apps/web/composables/: useApi.ts  useUpdateCheck.ts
apps/web/layouts/: auth.vue  default.vue
apps/web/middleware/: auth.ts  module.ts
apps/web/pages/: [...slug].vue  index.vue  setup.vue
apps/web/plugins/: auth.client.ts  panel-config.client.ts
apps/web/stores/: alerts.ts  auth.ts  backups.ts  databases.ts  gameCommands.ts  invitations.ts  mods.ts  modules.ts  players.ts  profile.ts  servers.ts  worlds.ts
apps/web/types/: index.ts
deploy/daemon/: .env.template  docker-compose.yml
deploy/panel/: .env.template  Caddyfile.template  Makefile  docker-compose.yml
docs/: production-hardening.md  security-architecture.md
scripts/: deploy.sh  discord-finalize.sh  discord-polish.sh  discord-rename-cats.sh  discord-setup.sh  discord-style.sh  discord-update-msgs.sh  gen-node-token.sh  install-daemon.sh  install-panel.sh  install.sh  setup-dev.sh
scripts/lib/: common.sh
services/api/: Dockerfile  go.mod  go.sum
services/api/migrations/: 001_initial.sql  002_indexes.sql  003_server_logs.sql  004_node_commands.sql  005_server_mods.sql  006_game_commands.sql  007_game_commands_permissions.sql  008_permissions.sql  009_user_profiles.sql  010_server_invitations.sql  011_server_databases.sql  012_plugin_detection.sql  013_encrypt_totp.sql  014_remove_seed_admin.sql  015_node_enrollments.sql  016_player_ops_mute.sql  017_node_metrics.sql  018_alert_webhook_url.sql  019_fix_default_game_commands.sql  020_app_settings.sql  021_node_public_address.sql  022_real_hytale_commands.sql  023_op_subcommands_and_kick_args.sql  024_server_view_manage_perms.sql  (+7 more)
services/daemon/: Cargo.toml  Dockerfile  config.example.toml
services/daemon/src/: api_client.rs  command_poller.rs  config.rs  downloader.rs  heartbeat.rs  http_server.rs  main.rs  net_monitor.rs  plugin_scanner.rs
services/daemon/src/process/: hytale.rs  manager.rs  mock.rs  mod.rs
services/discord-bot/: Dockerfile  README.md  index.js  package.json
(+103 files in other folders)
