[package]
name = "talepanel-desktop"
version = "0.1.0"
description = "TalePanel Desktop Admin App"
authors = ["Tyraxo"]
license = "UNLICENSED"
repository = ""
edition = "2021"

[lib]
name = "talepanel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "talepanel-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
